# mscribe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  installation.sh  mkdocs.yml  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_change.yml  feature_request.yml
docs/: index.md
docs/assets/css/: custom.css  termynal.css
docs/assets/js/: custom.js  termynal.js
mscribe/: app.py
mscribe/website/: __init__.py
mscribe/website/base/: blueprints.py  configuration.py  database.py
mscribe/website/blueprints/: admin.py
mscribe/website/schema/: __init__.py
mscribe/website/static/css/: static.css
mscribe/website/templates/: post.html
src/: app.py  main.py
src/website/: __init__.py
src/website/base/: __init__.py  blueprints.py  database.py
src/website/blueprints/: __init__.py  admin.py  blog.py  client.py  index.py  reader.py
src/website/controller/: __init__.py  blog.py  language.py  translation.py
src/website/converter/: __init__.py
src/website/data/: __init__.py  blog.py  language.py  translation.py
src/website/model/: __init__.py
src/website/objects/enums/: __init__.py  blog_difficulty.py  blog_status.py
src/website/objects/models/: __init__.py  blog.py  key_value.py  language.py  translation.py
src/website/schema/: __init__.py
src/website/static/css/: blogbox.css  blogcontent.css  blogpost.css  footer.css  highlight.css  index.css  latest-posts.css  navbar.css  post-container.css  post-content.css  post.css  (+5 more)
src/website/templates/: blogpost.html  index.html  post.html
(+48 files in other folders)
