[project]
name = "mscribe"
version = "0.1.0"
description = "Mscribe is a lightweight blogging platform designed for creators"
authors = [
    {name = "Murtada Altarouti",email = "murtada.altarouti@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (==3.1.1)",
    "flask-sqlalchemy (==3.1.1)",
    "sqlalchemy (==2.0.36)",
    "regex (==2024.11.6)",
    "pymysql (==1.1.1)",
    "cryptography (==44.0.1)"
]

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-bugbear (>=24.12.12,<25.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "types-tabulate (>=0.9.0.20241207,<0.10.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
